# blog

./: .gitignore  .gitmodules  about.markdown  about.md  blog.cabal  contact.markdown  contact.md  flake.nix  index.html  release.nix  series.html  site.hs  tags.html
.obsidian/: workspace-mobile.json
css/: default.css  syntax.css
posts/: 2020-10-15-first-post.markdown  2020-10-15-first-post.md  2020-10-15-setup-local-blog.markdown  2020-10-15-setup-local-blog.md  2020-10-16-1-deploy-to-github-pages.markdown  2020-10-16-1-deploy-to-github-pages.md  2020-10-16-2-add-syntax-highlighting.markdown  2020-10-16-2-add-syntax-highlighting.md  2020-10-17-1-configure-emacs.markdown  2020-10-20-1-unexpected-writing-perk.markdown  2020-10-20-1-unexpected-writing-perk.md  2020-10-22-add-tags-to-site.markdown  2020-10-22-add-tags-to-site.md  2021-10-05-server-setup.markdown  2021-10-08-password-manager.markdown  2021-10-08-password-manager.md  2021-10-09-os-install.markdown  2021-10-09-os-install.md  2023-04-21-sops-on-nixops-2.markdown  2023-04-21-sops-on-nixops-2.md  2023-05-08-launch-capture-window-in-kde.markdown  2023-05-08-launch-capture-window-in-kde.md  2023-05-09-quickly-create-a-post-from-emacs.markdown  2023-05-11-infrared-remote-for-automating-the-house.md  2023-05-12-install-nixos-on-a-raspberry-pi.markdown  2023-05-12-install-nixos-on-a-raspberry-pi.md  2023-05-12-ssh-agent-with-gpg.markdown  2023-05-15-declarative-wi-fi-with-encrypted-secret-on-nix-os.markdown  2023-05-15-declarative-wi-fi-with-encrypted-secret-on-nix-os.md  2023-08-14-cache-go-tests-in-ci.markdown  (+38 more)
(+4 files in other folders)
