name:               blog
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , blaze-html == 0.9.1.*
                  , containers == 0.6.2.*
                  , hakyll == 4.13.*
  ghc-options:      -threaded
  default-language: Haskell2010
