name:               blog
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
                    -- https://downloads.haskell.org/~ghc/9.4.3/docs/users_guide/9.4.3-notes.html
  build-depends:    base >= 4.2 && < 5
                    -- https://jaspervdj.be/hakyll/releases.html
                  , hakyll >= 4.12 && < 5
  ghc-options:      -threaded
  default-language: Haskell2010
